<resources>
    <string name="app_name">OPSC7312 poe</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="click_to_login">click_to_login</string>
    <string name="click_to_register">Click_to_register</string>
    <string name="logout">Logout</string>
    <string name="MoodPromps">How are you feeling today?</string>
    <string name="Rad">Rad</string>
    <string name="rad">Rad</string>
    <string name="good">Good</string>
    <string name="meh">Meh</string>
    <string name="bad">Bad</string>
    <string name="awful">Awful</string>
    <string name="first_name">First Name</string>
    <string name="last_name">last Name</string>
    <string name="audio_icon">Audio Icon</string>
    <string name="play_pause_button">Play/Pause Button</string>
    <string-array name="time_frame_options">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>

</resources>

</resources>
